objects/Demo_Custom__c.object
<CustomObject>
    <description>create for Demo purpose</description>
    <fields>
        <fullName>Field_One__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Two__c</fullName>
        <label>Field Two</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>field_5__c</fullName>
        <description>field five</description>
        <label>field 5</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>field_6__c</fullName>
        <description>field 6</description>
        <label>field 6</label>
        <type>Email</type>
    </fields>
    <label>Demo Object</label>
    <nameField>
        <label>Demo Custom  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DemoValidationRuleOne</fullName>
        <active>true</active>
        <description>created for Demo.</description>
        <errorConditionFormula>AND(
 Field_One__c,
 ISBLANK(Field_Two__c)
)</errorConditionFormula>
        <errorMessage>Please enter Field two if Field one is checked.</errorMessage>
    </validationRules>
</CustomObject>